Correctly support multi line comment annotations